--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 		understanding of color theory&sbquo; from painting to interior design. Lots of big marketing companies also use color theory to influence their audiences opinion. 
 		Colors can have an effect on how willing we are to buy their product. Tons of big company logos use 
 		color theory as well&sbquo; by using color combinations that look appealing.</p>
-		<img src="images/w3c.png" alt="image of w3c logo"><img src="images/css.png" alt="image of css validator">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F"><img src="images/w3c.png" alt="image of w3c logo"></a><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/css.png" alt="image of css validator"></a>
 	</body>
 </html>
