--- a/thecolorwheel.html
+++ b/thecolorwheel.html
@@ -9,7 +9,7 @@
 		<h1 id="top">Color Theory</h1>
 		<!--code for navigation bar-->
 		<ul class="navbar">
-			<li class="li"><a href="home.html">Home</a></li>
+			<li class="li"><a href="index.html">Home</a></li>
 			<li class="li" id="active"><a href="thecolorwheel.html">The Color Wheel</a></li>
 			<li class="li"><a href="colorcontext.html">Color Context</a></li>
 			<li class="li"><a href="colorpsychology.html">Color Psychology</a></li>
@@ -69,6 +69,6 @@
 		an example of different saturations. They are 2 of the same images&sbquo; only the right one is more saturated than the left.</p>
 		<img class="satimgs" src="images/sat1.jpg" alt="desaturated photo of landscape"><img class="satimgs" src="images/sat2.jpg" alt="saturated photo of landscape">
 		<p>return to <a href="#top">top</a> of the page</p>
-		<img src="images/w3c.png" alt="image of w3c logo"><img src="images/css.png" alt="image of css validator">
+		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2Fthecolorwheel.html"><img src="images/w3c.png" alt="image of w3c logo"></a><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/css.png" alt="image of css validator"></a>
 	</body>
 </html>
