--- a/sources.html
+++ b/sources.html
@@ -11,7 +11,7 @@
 		<ul class="navbar">
 			<li class="li"><a href="index.html">Home</a></li>
 			<li class="li"><a href="thecolorwheel.html">The Color Wheel</a></li>
-			<li class="li"><a href="index6.html">Color Context</a></li>
+			<li class="li"><a href="colorcontext.html">Color Context</a></li>
 			<li class="li"><a href="colorpsychology.html">Color Psychology</a></li>
 			<li class="li" id="active"><a href="sources.html">Sources</a></li>
 		</ul>
