--- a/colorpsychology.html
+++ b/colorpsychology.html
@@ -16,39 +16,40 @@
 			<li class="li"><a href="sources.html">Sources</a></li>
 		</ul>
 		<h2>Color Psychology</h2>
-		<p>Different colors can evoke different feelings in people. Of course a color doesnt always evoke the same feeling in different people&sbquo; 
-		as personal experiences influence your opinion on a color&sbquo; but colors often evoke similar feelings in people&sbquo; which is how brands 
-		use colors to attract their audience.</p>
+		<p>Different colors can evoke different feelings in people. Of course a color doesn&rsquo;t always evoke the same feeling in different people,  
+		as personal experiences influence your opinion on a color, but colors often evoke similar feelings in people, which is how brands 
+		use colors to attract their audience. You can apply color psychology in art and design by choosing specific colors for your piece 
+		that will set a specific mood for it, and evoke specific feelings in the person looking at it. </p>
 		<h3>What Colors Represent Which Emotions?</h3>
 		<h4>Red</h4>
-		<p>Red provokes the strongest feelings in Color Psychology. Red can represent passion and love&sbquo; as well as power and anger. It 
-		is also known to represent danger&sbquo; excitement&sbquo; aggression&sbquo; and dominance. </p>
+		<p>Red provokes the strongest feelings in Color Psychology. Red can represent passion and love, as well as power and anger. It 
+		is also known to represent danger, excitement, aggression, and dominance. </p>
 		<h4>Orange</h4>
-		<p>Orange is often described as bright&sbquo; and happy&sbquo; and is a color that attracts attention. Orange is linked to things such as 
+		<p>Orange is often described as bright, and happy, and is a color that attracts attention. Orange is linked to things such as 
 		spirituality and fall. </p>
 		<h4>Yellow</h4>
-		<p>Yellow is a color that is often associated with warmth&sbquo; happiness&sbquo; energy&sbquo; attention&sbquo; and brightness. Yellow can also 
+		<p>Yellow is a color that is often associated with warmth, happiness, energy, attention, and brightness. Yellow can also 
 		cause feelings of frustration and is tiring on the eyes. </p>
 		<h4>Green</h4>
-		<p>Green usually reminds people of nature safety&sbquo; and luck&sbquo; but can also represent envy. It also is linked to calmeness&sbquo; motivation&sbquo; 
+		<p>Green usually reminds people of nature safety, and luck, but can also represent envy. It also is linked to calmness, motivation,
 		and optimism. </p>
 		<h4>Blue</h4>
-		<p>Blue can represent Stability&sbquo; calmness&sbquo; sadness&sbquo; and productivity. It can also be sincere&sbquo; intense&sbquo; or inspiring.</p>
+		<p>Blue can represent Stability, calmness, sadness, and productivity. It can also be sincere, intense, or inspiring.</p>
 		<h4>Purple</h4>
-		<p>Purple most commonly evokes feelings of wealth&sbquo; royalty&sbquo; mystery&sbquo; and imagination. It can also mean wisdom&sbquo; bravery&sbquo; 
-		spirituality&sbquo; and be thought of as unique and exotic. </p>
+		<p>Purple most commonly evokes feelings of wealth, royalty, mystery, and imagination. It can also mean wisdom, bravery, 
+		spirituality, and can be thought of as unique and exotic. </p>
 		<h4>Pink</h4>
-		<p>Pink often reminds people of love&sbquo; nurturing&sbquo; calmness&sbquo; and kindness. Pink also can mean joy&sbquo; creativity&sbquo; and femininity&sbquo; and be refreshing
+		<p>Pink often reminds people of love, nurturing, calmness, and kindness. Pink also can mean joy, creativity, and femininity, and can be refreshing
 		and childish.</p>
 		<h4>Brown</h4>
-		<p>Brown Evokes feelings of nature&sbquo; strength&sbquo; isolation&sbquo; and security. Brown reminds people of things like resilience and comfort. It 
-		can also be associated with negative emotions&sbquo; as most dark colors are.</p>
+		<p>Brown Evokes feelings of nature, strength, isolation, and security. Brown reminds people of things like resilience and comfort. It 
+		can also be associated with negative emotions, as most dark colors are.</p>
 		<h4>White</h4>
-		<p>White is often thought to represent emptiness&sbquo; innocence&sbquo; cleanliness&sbquo; and peacefulness. White can also be cold&sbquo; isolated&sbquo; simplistic&sbquo; 
-		pure&sbquo; and fresh.</p>
+		<p>White is often thought to represent emptiness, innocence, cleanliness, and peacefulness. White can also be cold, isolated, simplistic, 
+		pure, and fresh.</p>
 		<h4>Black</h4>
-		<p>Black is usually considered mysterious&sbquo; powerful&sbquo; bold&sbquo; and unhappy. Black is often associated with fanciness and wealth&sbquo; as well as 
-		death&sbquo; evil&sbquo; fear&sbquo; anger&sbquo; and sadness.</p>
+		<p>Black is usually considered mysterious, powerful, bold, and unhappy. Black is often associated with fanciness and wealth, as well as 
+		death, evil, fear, anger, and sadness.</p>
 		<p>return to <a href="#top">top</a> of the page</p>
 		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2Fcolorpsychology.html"><img src="images/w3c.png" alt="image of w3c logo"></a><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/css.png" alt="image of css validator"></a>
 	</body>
