--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 			<li class="li"><a href="sources.html">Sources</a></li>
 		</ul>
 		<h2>What is Color Theory?</h2>
-		<p>Color theory is the understanding of colors&sbquo; how they work&sbquo; and how to use them. It includes how humans percieve color&sbquo; how different
-		 colors interact with each other- How they mix&sbquo; contrast&sbquo; etc.&sbquo; and how to replicate them. It also involves how colors influence our feelings. </p>
+		<p>Color theory is the understanding of colors, how they work, and how to use them. It includes how humans perceive color, how different
+		 colors interact with each other- How they mix, contrast, etc., and how to replicate them. It also involves how colors influence our feelings. </p>
 		<h2>Why is color theory important?</h2>
-		<p>Color theory helps us understand colors in general&sbquo; how they work together&sbquo; and how they influence our perception. Lots of fields require an 
-		understanding of color theory&sbquo; from painting to interior design. Lots of big marketing companies also use color theory to influence their audiences opinion. 
+		<p>Color theory helps us understand colors in general, how they work together and how they influence our perception. Lots of fields require an 
+		understanding of color theory, from painting to interior design. Lots of big marketing companies also use color theory to influence their audiences opinion. 
 		Colors can have an effect on how willing we are to buy their product. Tons of big company logos use 
-		color theory as well&sbquo; by using color combinations that look appealing.</p>
+		color theory as well, by using color combinations that look appealing.</p>
 		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F"><img src="images/w3c.png" alt="image of w3c logo"></a><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/css.png" alt="image of css validator"></a>
 	</body>
 </html>
