--- a/sources.html
+++ b/sources.html
@@ -17,18 +17,18 @@
 		</ul>
 		<h2>Sources</h2>
 		<h3>Information</h3>
-		<p><a href="https://www.colormatters.com/color-and-design/basic-color-theory">https://www.colormatters.com/color-and-design/basic-color-theory</a></p>
-		<p><a href="https://blog.prototypr.io/the-context-of-color-ae93fe6079c0">https://blog.prototypr.io/the-context-of-color-ae93fe6079c0</a></p>
-		<p><a href="https://99designs.ca/blog/tips/the-7-step-guide-to-understanding-color-theory/">https://99designs.ca/blog/tips/the-7-step-guide-to-understanding-color-theory/</a></p>
-		<p><a href="https://www.canva.com/colors/color-wheel/">https://www.canva.com/colors/color-wheel/</a></p>
-		<p><a href="https://www.verywellmind.com/color-psychology-2795824">https://www.verywellmind.com/color-psychology-2795824</a></p>
+		<p>“Basic Color Theory.” Color Matters, Color Matters, <a href="https://www.colormatters.com/color-and-design/basic-color-theory">https://www.colormatters.com/color-and-design/basic-color-theory.</a></p>
+		<p>Reyes, Riel. “The Context of Color.” Medium, Prototypr, 22 Apr. 2019, <a href="https://blog.prototypr.io/the-context-of-color-ae93fe6079c0">https://blog.prototypr.io/the-context-of-color-ae93fe6079c0. </a></p>
+		<p>Decker, Kris. “The Bold, Bright Truth about Color Theory.” 99designs, 99designs, 7 July 2020, <a href="https://99designs.ca/blog/tips/the-7-step-guide-to-understanding-color-theory/">https://99designs.ca/blog/tips/the-7-step-guide-to-understanding-color-theory/. </a></p>
+		<p>“Color Wheel - Color Theory and Calculator | Canva Colors.” Canva, Canva, <a href="https://www.canva.com/colors/color-wheel/">https://www.canva.com/colors/color-wheel/. </a></p>
+		<p>Cherry, Kendra. “Can Color Affect Your Mood and Behavior?” Verywell Mind, Verywell Mind, 28 May 2020, <a href="https://www.verywellmind.com/color-psychology-2795824">https://www.verywellmind.com/color-psychology-2795824. </a></p>
 		<h3>Images</h3>
-		<p><a href="https://commons.wikimedia.org/wiki/File:RYB_color_model.png">https://commons.wikimedia.org/wiki/File:RYB_color_model.png</a></p>
-		<p><a href="https://commons.wikimedia.org/wiki/File:Ryb-colorwheel.svg">https://commons.wikimedia.org/wiki/File:Ryb-colorwheel.svg</a></p>
-		<p><a href="https://it.m.wikipedia.org/wiki/File:Quadrati_grigi_su_quadrati_diversi.png">https://it.m.wikipedia.org/wiki/File:Quadrati_grigi_su_quadrati_diversi.png</a></p>
-		<p><a href="https://pxhere.com/en/photo/1638312">https://pxhere.com/en/photo/1638312</a></p>
-		<p><a href="https://www.moving.com/tips/how-to-choose-a-color-scheme-for-your-home/">https://www.moving.com/tips/how-to-choose-a-color-scheme-for-your-home/</a></p>
-		<p><a href="https://www.viget.com/articles/tints-tones-shades/">https://www.viget.com/articles/tints-tones-shades/</a></p>
+		<p>“Category:RYB.” Wikimedia Commons, Wikimedia Commons, <a href="https://commons.wikimedia.org/wiki/File:RYB_color_model.png">https://commons.wikimedia.org/wiki/Category:RYB. </a></p>
+		<p>“File:Ryb-Colorwheel.svg.” Wikimedia Commons, Wikipedia Commons, <a href="https://commons.wikimedia.org/wiki/File:Ryb-colorwheel.svg">https://commons.wikimedia.org/wiki/File:Ryb-colorwheel.svg. </a></p>
+		<p>"File:Quadrati grigi su quadrati diversi." Wikipedia, Wikipedia, <a href="https://it.m.wikipedia.org/wiki/File:Quadrati_grigi_su_quadrati_diversi.png">https://it.m.wikipedia.org/wiki/File:Quadrati_grigi_su_quadrati_diversi.png.</a></p>
+		<p>“Free Images : Nature, Cloud, Sky, Highland ... - Pxhere.com.” Pxhere, Pxhere, <a href="https://pxhere.com/en/photo/1638312">https://pxhere.com/en/photo/1638312. </a></p>
+		<p>Mueller, Laura. “How to Choose a Color Scheme for Your Home.” Moving.com, Moving.com, 10 Apr. 2020, <a href="https://www.moving.com/tips/how-to-choose-a-color-scheme-for-your-home/">https://www.moving.com/tips/how-to-choose-a-color-scheme-for-your-home/. </a></p>
+		<p>“From Darkness to Light: Color Versatility Using Tints, Tones, and Shades: Viget.” Viget, Viget, <a href="https://www.viget.com/articles/tints-tones-shades/">https://www.viget.com/articles/tints-tones-shades/. </a></p>
 		<p>return to <a href="#top">top</a> of the page</p>
 		<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2Fsources.html"><img src="images/w3c.png" alt="image of w3c logo"></a><a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fjoannaluoo.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"><img src="images/css.png" alt="image of css validator"></a>
 	</body>
